# optima-ops

./: .gitignore  Cargo.toml  README.md
crates/optima-ops-cli/: Cargo.toml
crates/optima-ops-cli/src/: main.rs
crates/optima-ops-cli/src/commands/: env.rs  mod.rs  services.rs  version.rs
crates/optima-ops-core/: Cargo.toml
crates/optima-ops-core/src/: config.rs  environments.rs  error.rs  github.rs  infra.rs  lib.rs  monitoring.rs  ssh.rs  utils.rs
crates/optima-ops-web/: Cargo.toml  askama.toml
crates/optima-ops-web/src/: filters.rs  main.rs  state.rs
crates/optima-ops-web/src/routes/: health.rs  mod.rs
crates/optima-ops-web/static/css/: style.css
crates/optima-ops-web/static/js/: htmx.min.js
crates/optima-ops-web/templates/: base.html  base_with_sidebar.html  dashboard.html  env_ec2_prod.html  env_ecs.html  env_shared.html  github.html  overview.html
crates/optima-ops-web/templates/partials/: container_logs.html  containers.html  deployments.html  github_recent.html  header.html  infrastructure.html  overview_instances.html  service_card.html
