[package]
name = "optima-ops-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Web Dashboard for Optima Ops"

[[bin]]
name = "optima-ops-web"
path = "src/main.rs"

[dependencies]
# Internal crates
optima-ops-core = { workspace = true }

# Async Runtime
tokio = { workspace = true }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP Client (for health checks)
reqwest = { workspace = true }

# Web Framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Template Engine
askama = { workspace = true }
askama_axum = { workspace = true }

# AWS SDK
aws-config = { workspace = true }
aws-sdk-ecs = { workspace = true }
aws-sdk-ec2 = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
chrono = { workspace = true }
